hedtools/tests/data/invalid_wiki_schemas/HED_header_missing.mediawiki
This file has no header and is clearly invalid

!# start schema